WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166296
Extensions3DOpenGL[ES] constructor should not be explicit
https://bugs.webkit.org/show_bug.cgi?id=166296
Summary
Extensions3DOpenGL[ES] constructor should not be explicit
Michael Catanzaro
Reported
2016-12-20 16:15:14 PST
Extensions3DOpenGL[ES] constructor should not be explicit because it grew a second parameter in
r208022
.
Attachments
Patch
(2.52 KB, patch)
2016-12-20 16:16 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-elcapitan
(1.49 MB, application/zip)
2016-12-20 17:29 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2016-12-20 16:16:52 PST
Created
attachment 297566
[details]
Patch
Build Bot
Comment 2
2016-12-20 17:29:26 PST
Comment on
attachment 297566
[details]
Patch
Attachment 297566
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2761959
New failing tests: imported/w3c/web-platform-tests/IndexedDB/interfaces.worker.html
Build Bot
Comment 3
2016-12-20 17:29:30 PST
Created
attachment 297574
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 4
2016-12-21 13:24:59 PST
Comment on
attachment 297566
[details]
Patch Clearing flags on attachment: 297566 Committed
r210074
: <
http://trac.webkit.org/changeset/210074
>
WebKit Commit Bot
Comment 5
2016-12-21 13:25:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug