Extensions3DOpenGL[ES] constructor should not be explicit https://bugs.webkit.org/show_bug.cgi?id=166296

Reviewed by Darin Adler.

These constructors used to only have one parameter. Now they have two and they're both
mandatory.

* platform/graphics/opengl/Extensions3DOpenGL.h:
* platform/graphics/opengl/Extensions3DOpenGLES.h:


Canonical link: https://commits.webkit.org/183687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210074 268f45cc-cd09-0410-ab3c-d52691b4dbfc